--- a/map2.html
+++ b/map2.html
@@ -19,6 +19,7 @@
 <body>
     <div id="sidebar">
         <div id="title">COVID-19 Cases in the United States - 2020</div>
+        <div id="totalCasesDisplay">Total Cases: 0</div>
         <div id="chart"></div>
         <div id="description">
             <p>This dashboard visualizes the spread and impact of COVID-19 across the United States in 2020. Data is represented at the county level, providing insight into local and nationwide trends.</p>
